--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 streamlit>=1.32.0
-ultralytics==8.2.48
+
+# PyTorch (CPU, Python 3.11 compatible)
 torch==2.2.2
 torchvision==0.17.2
+
+# YOLO
+ultralytics==8.2.48
+
+# OpenCV (cloud-safe)
 opencv-python-headless==4.9.0.80
+
 pillow
-google-generativeai
 numpy
+google-generativeai
